JEAP-5099: Removed the deprecated rest controller endpoints for the Internal API V2 and Partner API V2. The new standard headers are now required for all requests